--- a/META.yml
+++ b/META.yml
@@ -1,21 +1,19 @@
---- #YAML:1.0
-name:               File-TTX
-version:            0.03
-abstract:           Utilities for dealing with TRADOS TTX files
+---
+abstract: Utilities for dealing with TRADOS TTX files
 author:
-    - Michael Roberts <michael@vivtek.com>
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Test::More:   0
-    XML::xmlapi:  0.07
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.48
+  - 'Michael Roberts <michael@vivtek.com>'
+build_requires: {}
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.141170'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: File-TTX
+no_index:
+  directory:
+    - t
+    - inc
+resources:
+  repository: https://github.com/Vivtek/File-TTX.git
+version: 0.04
